[package]
name = "p2ping"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "ping a libp2p peer"
repository = "https://github.com/btwiuse/p2ping"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
either = "1.8.1"
futures = "0.3.28"
libp2p = { version = "0.51.3", features = ["tcp", "dns", "async-std", "noise", "mplex", "yamux", "websocket", "ping", "macros", "identify", "rsa", "secp256k1", "quic"] }
