[package]
name = "p2ping"
version = "0.0.9"
edition = "2024"
license = "MIT"
description = "ping a libp2p peer"
repository = "https://github.com/btwiuse/p2ping"
documentation = "https://docs.rs/p2ping"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
either = "1.15.0"
futures = "0.3.32"
hex = "0.4.3"
libp2p = { version = "0.56.0", features = ["tcp", "dns", "tokio", "noise", "yamux", "websocket", "ping", "macros", "identify", "rsa", "secp256k1", "quic", "relay", "ecdsa", "kad"] }
libp2p-noise = "0.46.1"
libp2p-tls = "0.6.2"
libp2p-yamux = "0.47.0"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
